[package]
name = "titan-wipe"
version = "1.0.0"
edition = "2021"
authors = ["Kailash"]
description = "Enterprise-grade, NIST SP 800-88 Rev.1 compliant storage sanitization utility"
license = "MIT"

[dependencies]
libc = "0.2"
blake3 = "=1.5.0"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
chrono = { version = "=0.4.31", features = ["serde"] }
clap = { version = "=4.4.18", features = ["derive", "color"] }
indicatif = "=0.17.7"
log = "=0.4.20"
env_logger = "=0.10.1"
rand = "=0.8.5"
hex = "=0.4.3"
thiserror = "=1.0.51"
uuid = { version = "=1.6.1", features = ["v4"] }
ctrlc = "=3.4.2"
